# Lunar-HFE

./: .gitignore  CITATION.cff  LICENSE  LICENSE-CC-BY-4.0  Makefile  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: tests.yml
data/: README.md
data/apollo/a15/: a15p1f1.tab  a15p1f2.tab  a15p1f3.tab  a15p1f4.tab  a15p2f1.tab  a15p2f2.tab  a15p2f3.tab  a15p2f4.tab
data/diviner/: README.md
data/diviner/gcp/: DLRE_GCP.FMT  global_cumul_avg_cyl_10n20n_002.lbl  global_cumul_avg_cyl_20n30n_002.lbl  global_cumul_avg_cyl_20s10s_002.lbl  global_cumul_avg_cyl_30s20s_002.lbl
data/reference/: change4_huang2022.csv  chaste_murty2025.csv
data/spice/: moon_de440_250416.tf
docs/: BEGINNERS_GUIDE.md  CODE_MANUAL.md  CODE_REVIEW.md  FLAG_REPORT.md  NUMBA_VS_CPP_JUSTIFICATION.md  NUMBA_VS_CPP_TALKING_POINTS.md  REPRODUCING.md  RUNTIME.md
docs/code_guide/: code_guide.tex
docs/justification/: justification.tex
docs/manuscript/: manuscript.tex
docs/method_equivalence/: equivalence.tex
docs/teaching/: README.md  beginners_guide.tex  make_teaching_figures.py
lunar/: __init__.py  _bootstrap.py  apollo_helpers.py  config.py  constants.py  diviner.py  ephem.py  equilibrium.py  grid.py  properties.py  solver.py  validation.py
lunar/plotting/: __init__.py  animations.py  style.py  style_guide.py
notebooks/: 00_setup.ipynb  01_methods.ipynb  02_retrieval.ipynb  03_results.ipynb  04_discussion.ipynb  05_animations.ipynb  equilibrium_demo.ipynb
output/: bayesian_crosscheck_samples.json  borestem_sensitivity.json  diviner_closure.json  equilibrium_certification.json  fixed_input_sensitivities.json  headline_bias.json  headline_rmse.json  kd_error_budget.json  kd_qb_envelope.json  kd_retrieval_results.json  kd_sweep_results.json  model_selection.json  phase_a4_results.json  phase_a_results.json  phase_b_mcmc_samples.json  stability_threshold_sensitivity.json  surface_bias_test.json  uniform_kd_test.json
paper/appendix/: appendix.tex
paper/letter/: build_clean.sh  letter.tex  letter_clean.tex  references.bib
paper/primer/: guidebook.tex  guidebook_print.tex  primer.tex
scripts/: fetch_diviner.py  make_all_figures.py  run_all_timed.py
scripts/analysis/: phase2_depth_convergence.py  phase4_performance.py
scripts/figures/: make_alpha_sweep_figure.py  make_apollo_timeline.py  make_book_figures.py  make_codeguide_figures.py  make_context_map_figure.py  make_equilibrium_certification.py  make_equilibrium_demo.py  make_intro_figures.py  make_justification_figures.py  make_letter_figures.py  make_letter_unified_figs.py  make_newmethod_animation.py  make_primer_figures.py  make_reconstruct_animation.py  make_results_figures.py  make_spinup_animation.py  phase2_figures_v2.py
scripts/pipeline/: bayesian_crosscheck.py  compute_borestem_sensitivity.py  compute_diviner_closure.py  compute_error_budget.py  compute_fixed_input_sensitivities.py  compute_headline_rmse.py  compute_model_selection.py  compute_stability_threshold_sensitivity.py  compute_surface_bias_test.py  compute_uniform_kd_sensitivity.py  compute_uniform_kd_test.py  kd_sweep.py  phase_a4_diviner.py  phase_a_finish.py  phase_a_pipeline.py  phase_b_mcmc.py  phase_b_widen_joint.py  retrieve_kd.py
slides/: build_assets.py  build_deck.js  build_deck.py  progress_2026-06-17.pptx  qa_preview.py
tests/: test_bedrock.py  test_constants.py  test_ephem.py  test_equilibrium.py  test_grid.py  test_properties.py  test_solver.py  test_solver_assembly.py  test_solver_jit_identity.py
(+12 files in other folders)
