[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunar-clean"
version = "0.1.0"
description = "Lunar-Clean v2: planetary subsurface thermal modeling pipeline for the TSUKIMI mission."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ramon III Palinguba Gregorio", email = "rp3gregorio@gmail.com" },
]
keywords = [
  "lunar",
  "thermal-modeling",
  "planetary-science",
  "permanently-shadowed-regions",
  "TSUKIMI",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "numba>=0.58",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
geo = [
  "rasterio>=1.3",
  "rioxarray>=0.15",
  "xarray>=2023.10",
  "netcdf4>=1.6",
  "h5py>=3.10",
]
spice = [
  "spiceypy>=6.0",
]
plot = [
  "plotly>=5.18",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
]

[project.urls]
Repository = "https://github.com/rp3gregorio/Lunar-V2"

[tool.setuptools]
packages = ["lunar", "lunar.plotting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
