[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apollo-hfe-kd-retrieval"
version = "0.1.0"
description = "Per-site retrieval of lunar deep-regolith thermal conductivity K_d at the Apollo 15 and 17 Heat-Flow Experiment boreholes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ramon III Palinguba Gregorio", email = "rp3gregorio@gmail.com" },
]
keywords = [
  "lunar",
  "thermal-modeling",
  "planetary-science",
  "Apollo",
  "Heat-Flow Experiment",
  "regolith",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "spiceypy>=6.0",
  "tqdm>=4.65",
  "pyyaml>=6.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
mcmc = [
  "emcee>=3.1",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
  "nbformat>=5.7",
  "pymupdf>=1.23",
]

[project.urls]
Repository = "https://github.com/rp3gregorio/Lunar-HFE"

[tool.setuptools]
packages = ["lunar", "lunar.plotting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
